--- a/ProyectoClinica/WebContent/paginas/citas/cabpacientes.css
+++ b/ProyectoClinica/WebContent/paginas/citas/cabpacientes.css
@@ -1,10 +1,8 @@
 @charset "ISO-8859-1";
 
-td
-{
-	
-    padding:0 0px 0 70px;
-}
+
+
+
 H1
 {
 	max-width: 1000px;
@@ -12,7 +10,7 @@ H1
 	background:radial-gradient(circle at 78.58% 50%, #bafdff 0, #88ddfc 25%, #40b8e1 50%, #0094c7 75%, #0076b2 100%);;
 	padding: 30px;
 	color:white;
-	
+	text-align:center;
 	padding:15px 500px 15px 500px;
 	border-radius:0px;
     font-family:Arial;  
@@ -24,39 +22,40 @@ footer{
 	max-width: 1000px;
 	margin:0 auto;
 	background:#494343;
-	padding: 0px;
+	padding: 30px;
 	color:white;
 	text-align:center;
-	padding:5px 40px 0px 5px;
-	border-radius:9px;
+	padding:15px 500px 15px 500px;
+	
     font-family:Arial;  
     font-zise:18px;
 }
 #seccionA{
-	width:330px;
-	background:radial-gradient(circle at 50.11% 49.35%, #633d33 0, #5a3731 8.33%, #4e2f2e 16.67%, #402728 25%, #2f1e20 33.33%, #1c1315 41.67%, #000000 50%, #000000 58.33%, #000000 66.67%, #000000 75%, #000000 83.33%, #000000 91.67%, #000000 100%);
+	width:300px;
+	background:#FFFFFF;
 	opacity:0.9;
-	color:#ffffff;
+	color:#000000;
 	margin:auto;
-	margin-top:1px;
-	padding:0px 420px 0px 0px;
+	margin-left:auto;
+    margin-right:auto;
+	
 	
 }
 #seccionB{
-	width:330px;
-	background:#494343;
+	width:300px;
+	background:#FFFFFF;
 	opacity:0.9;
-	color:#ffffff;
+	color:#000000;
 	margin:auto;
 	margin-top:1px;
-	padding:0px 650px 0px 0px;
-	text-align:center;
+	
+	
 	
 }
 
 #boton {
         padding:1px;
-        background:#494343;
+        background:#FFFFFF;
         color:white;
         font:bold 10px/10px verdana;
         width:100px;
