--- a/ProyectoClinica/WebContent/paginas/citas/cabpacientes.css
+++ b/ProyectoClinica/WebContent/paginas/citas/cabpacientes.css
@@ -65,14 +65,13 @@ footer{
         margin-left:auto;
         margin-right:auto;
     }
-    #seccionc{
-	width:330px;
-	background:radial-gradient(circle at 50.11% 49.35%, #633d33 0, #5a3731 8.33%, #4e2f2e 16.67%, #402728 25%, #2f1e20 33.33%, #1c1315 41.67%, #000000 50%, #000000 58.33%, #000000 66.67%, #000000 75%, #000000 83.33%, #000000 91.67%, #000000 100%);
+#seccionC{
+	width:300px;
+	background:#FFFFFF;
 	opacity:0.9;
-	color:#ffffff;
+	color:#000000;
 	margin:auto;
-	margin-top:1px;
-	padding:0px 170px 0px 0px;
+	padding:15px 500px 15px 500px;
 	
 }
 
