v26 añado varios jsp de consultas y crear citas

--- a/ProyectoClinica/WebContent/paginas/consulta/cabpacientes.css
+++ b/ProyectoClinica/WebContent/paginas/consulta/cabpacientes.css
@@ -40,13 +40,9 @@ footer{
 	
 	
 }
-#tablas{
+#seccionC{
 	
-	background:#FFFFFF;
-	opacity:0.9;
-	color:#000000;
-	margin:auto;
-    padding: 0px 500px 0px 0px;
+	
 	
 	
 }
