--- a/ProyectoClinica/WebContent/paginas/MenuPrincipal/steel/conf_style.css
+++ b/ProyectoClinica/WebContent/paginas/MenuPrincipal/steel/conf_style.css
@@ -3,18 +3,33 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  
+}
+
+H1
+{
+	max-width: 1000px;
+	margin:0 auto;
+	background:radial-gradient(circle at 78.58% 50%, #bafdff 0, #88ddfc 25%, #40b8e1 50%, #0094c7 75%, #0076b2 100%);;
+	padding: 30px;
+	color:white;
+	text-align:center;
+	padding:15px 500px 15px 500px;
+	border-radius:0px;
+    font-family:Arial;  
+    font-zise:18px;
 }
 
 .form-register {
   width: 400px;
   /* background: #24303c; */
   padding: 30px;
-  margin: auto;
+  margin: auto; 
   margin-top: 100px;
-  border-radius: 4px;
+ /*  border-radius: 4px; */
   font-family: 'calibri';
   color: black;
-  box-shadow: 7px 13px 37px #000;
+ /*  box-shadow: 7px 13px 37px #000; */
 }
 
 .form-register h4 {
@@ -59,4 +74,16 @@
   color: white;
   margin: 16px 0;
   font-size: 16px;
+}
+footer{
+	max-width: 1000px;
+	margin:0 auto;
+	background:#494343;
+	padding: 30px;
+	color:white;
+	text-align:center;
+	padding:15px 500px 15px 500px;	
+    font-family:Arial;  
+    font-zise:18px;
+    position:absolute; top:50px;
 }
