--- a/ProyectoClinica/WebContent/paginas/citas/cabpacientes.css
+++ b/ProyectoClinica/WebContent/paginas/citas/cabpacientes.css
@@ -56,9 +56,7 @@ footer{
 	opacity:0.9;
 	color:#000000;
 	margin:auto;
-	margin-top:1px;
-	
-	
+	margin-top:1px;	
 	
 }
 
@@ -74,5 +72,26 @@ footer{
         margin-left:auto;
         margin-right:auto;
     }
+    
+    .form-register {
+  width: 400px;
+  /* background: #24303c; */
+  padding: 30px;
+  margin: auto; 
+  margin-top: 100px;
+ /*  border-radius: 4px; */
+  font-family: 'calibri';
+  color: black;
+ /*  box-shadow: 7px 13px 37px #000; */
+}
 
-
+tr{
+float:left;
+width:150px;
+margin-bottom:10px; /*or whatever you want the spacing to be*/
+}
+input{
+float:left;
+width:150px;
+margin-bottom:10px; /*or whatever you want the spacing to be*/
+}
