--- a/ProyectoClinica/WebContent/paginas/consulta/cabpacientes.css
+++ b/ProyectoClinica/WebContent/paginas/consulta/cabpacientes.css
@@ -1,6 +1,13 @@
 @charset "ISO-8859-1";
 
-
+.boton {
+    padding: 4px 25px;
+    background: rgb(19, 143, 247);
+    border: 1px solid #1161B0;
+    color: #fff;
+    border-radius: 4px;
+    text-decoration:none;
+}
 
 
 H1
